--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
   font-size: 12px;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 body {
   font-family: "Montserrat", sans-serif;
@@ -9,10 +10,14 @@ body {
 /* Header */
 header {
   display: flex;
-  height: 10rem;
+  height: 5rem;
   align-items: center;
   justify-content: space-around;
   background-color: #4e2a84;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 100;
 }
 
 header .header__logo {
@@ -55,6 +60,7 @@ header .header__nav ul li a {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: 5rem;
 }
 #carousel .carousel__content {
   color: white;
@@ -162,4 +168,124 @@ header .header__nav ul li a {
   /* padding: 1rem; */
   text-align: center;
   border-radius: 50%;
+}
+/* Gallery */
+#gallery {
+  margin-top: 7rem;
+}
+#gallery h1 {
+  text-transform: uppercase;
+  font-size: 5rem;
+  text-align: center;
+  margin-bottom: 7rem;
+  font-weight: bold;
+}
+#gallery .gallery__content {
+  display: grid;
+  gap: 20px;
+  /* grid-template-columns: 1fr 1fr 1fr 1fr; */
+  grid-template-columns: repeat(4, 1fr);
+}
+#gallery .gallery__content .gallery__item {
+  position: relative;
+}
+/* #gallery .gallery__content .gallery__item a {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 1;
+} */
+#gallery .gallery__content .gallery__text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #3085a340;
+  text-align: right;
+  padding: 20px;
+  color: white;
+}
+#gallery .gallery__content .gallery__text:hover h3::after {
+  opacity: 1;
+  transform: translateY(0);
+}
+#gallery .gallery__content .gallery__text h3 {
+  font-size: 3rem;
+  text-transform: uppercase;
+  position: relative;
+  transform: translateY(50px);
+  transition: all 0.5s;
+}
+#gallery .gallery__content .gallery__text:hover h3 {
+  transform: translateY(0);
+}
+#gallery .gallery__content .gallery__text h3::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 0.4rem;
+  background-color: #fff;
+  margin-top: 2rem;
+  opacity: 0;
+  transform: translateY(50px);
+  transition: all 0.5s;
+}
+#gallery .gallery__content .gallery__text p {
+  position: absolute;
+  bottom: 4rem;
+  /* left: 0;
+  width: 100%;
+  padding: 10px; */
+  right: 2rem;
+  transform: translateY(4rem);
+  transition: all 0.5s;
+  opacity: 0;
+}
+#gallery .gallery__content .gallery__text:hover p {
+  transform: translateY(0);
+  opacity: 1;
+}
+#gallery .gallery__content img {
+  width: 100%;
+  height: 100%;
+}
+#gallery .gallery__content .gallery__1 {
+  grid-column: 1 / span 2;
+}
+#gallery .gallery__content .gallery__6 {
+  grid-column: 3 / span 2;
+}
+/* Bake Team */
+#bake__team {
+  background-color: #4e2a84;
+  margin-top: 2rem;
+}
+#bake__team .bake__team__content {
+  display: flex;
+  margin: 0 auto;
+  width: 80%;
+  justify-content: space-around;
+}
+#bake__team .bake__team__content .bake__team__item {
+  position: relative;
+}
+#bake__team .item__content {
+  position: absolute;
+  bottom: 0;
+  background-color: #fd1083;
+  width: 100%;
+  color: white;
+  padding: 2rem;
+}
+#bake__team .item__content h3,
+p {
+  font-size: 2rem;
+}
+#bake__team h1 {
+  text-transform: uppercase;
+  color: white;
+  text-align: center;
+  font-size: 5rem;
+  padding: 5rem 0;
 }
