--- a/css/style.css
+++ b/css/style.css
@@ -263,12 +263,17 @@ header .header__nav ul li a {
 }
 #bake__team .bake__team__content {
   display: flex;
+  flex-wrap: wrap;
+  /* align-content: space-around; */
+  /* align-items: center; */
+  justify-content: space-around;
   margin: 0 auto;
   width: 80%;
   justify-content: space-around;
 }
 #bake__team .bake__team__content .bake__team__item {
   position: relative;
+  margin-bottom: 5rem;
 }
 #bake__team .item__content {
   position: absolute;
@@ -276,11 +281,14 @@ header .header__nav ul li a {
   background-color: #fd1083;
   width: 100%;
   color: white;
-  padding: 2rem;
+  padding: 1.5rem;
+  transition: all 0.5s;
 }
-#bake__team .item__content h3,
-p {
+#bake__team .item__content h3 {
   font-size: 2rem;
+}
+#bake__team .item__content p {
+  font-size: 1.5rem;
 }
 #bake__team h1 {
   text-transform: uppercase;
@@ -288,4 +296,163 @@ p {
   text-align: center;
   font-size: 5rem;
   padding: 5rem 0;
+}
+/* overlay */
+#bake__team .overlay {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  color: white;
+  background-color: #000000a6;
+  opacity: 0;
+  transition: all 0.5s;
+}
+#bake__team .bake__team__item:hover .item__content {
+  opacity: 0;
+}
+#bake__team .bake__team__item:hover .overlay {
+  opacity: 1;
+}
+#bake__team .overlay .text {
+  position: absolute;
+  top: 7rem;
+  left: 2rem;
+}
+#bake__team .overlay .text ul {
+  list-style: none;
+}
+#bake__team .overlay .text ul li {
+  display: inline-block;
+}
+
+#bake__team .overlay .text ul li i {
+  width: 50px;
+  height: 50px;
+  color: white;
+  font-size: 2rem;
+  border: 1px solid white;
+  line-height: 50px;
+  text-align: center;
+  margin: 0.5rem;
+}
+/* Testimonials */
+#testimonials {
+  background-image: url("../images/cc1.jpg");
+  height: 500px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+#testimonials h1 {
+  font-size: 5rem;
+  text-align: center;
+  text-transform: uppercase;
+  color: white;
+  padding: 5rem 0;
+}
+#testimonials .testimonials__item {
+  color: white;
+  text-align: center;
+}
+#testimonials .testimonials__item p {
+  font-size: 1.5rem;
+}
+/* Contact */
+#contact h1 {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 5rem;
+  padding: 3rem 0;
+}
+#contact form {
+  display: flex;
+  flex-wrap: wrap;
+  width: 80%;
+  margin: 0 auto;
+}
+#contact form .contact__item {
+  width: 50%;
+  padding: 1rem;
+}
+#contact form .contact__item input {
+  width: 100%;
+  padding: 1.5rem;
+  border-radius: 5px;
+  border: 1px solid black;
+}
+#contact form .contact__item textarea {
+  width: 100%;
+}
+.width-100 {
+  width: 100% !important;
+}
+#contact form .btn__send {
+  width: 100%;
+  font-size: 2rem;
+  padding: 1rem;
+  border: 1px solid pink;
+  border-radius: 5px;
+  background-color: pink;
+  margin: 1rem;
+}
+/* Map */
+/* Back To Top */
+.backToTop {
+  position: fixed;
+  padding: 2rem;
+  bottom: 2rem;
+  right: 2rem;
+}
+.backToTop .backToTopLink {
+  opacity: 0;
+}
+.cd-top--is-visible {
+  /* back-to-top button visible */
+  visibility: visible;
+  opacity: 1 !important;
+}
+
+.cd-top--fade-out {
+  /* reduce button opacity if user keeps scrolling */
+  opacity: 0.5;
+}
+/* Animation */
+.animation {
+  width: 100px;
+  height: 100px;
+  background-color: red;
+  animation-name: DemoAnimation;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+  opacity: 0.5;
+  position: relative;
+  animation-delay: 1s;
+}
+@keyframes DemoAnimation {
+  0% {
+    background-color: pink;
+    top: 0;
+    left: 0;
+  }
+  25% {
+    background-color: yellow;
+    left: 200px;
+    top: 0;
+  }
+  50% {
+    background-color: blue;
+    left: 200px;
+    top: 500px;
+  }
+  75% {
+    background-color: green;
+    left: 0;
+    top: 500px;
+  }
+  100% {
+    background-color: orange;
+    left: 0;
+    top: 0;
+  }
 }
