--- a/css/style.css
+++ b/css/style.css
@@ -1,55 +1,59 @@
 * {
-  font-size: 12px;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-body {
+  /* font-weight: normal; */
   font-family: "Montserrat", sans-serif;
+}
+html {
+  font-size: 10px;
 }
 /* Header */
 header {
   display: flex;
-  height: 5rem;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
   background-color: #4e2a84;
   position: fixed;
-  width: 100%;
   top: 0;
+  width: 100%;
   z-index: 100;
+  padding: 1.5% 20%;
 }
-
 header .header__logo {
-  color: white;
   text-decoration: none;
+  color: white;
+  font-size: 3.4rem;
   text-transform: uppercase;
-  font-size: 2rem;
+  letter-spacing: 0.2rem;
 }
-
+header .header__nav {
+  margin-left: 8rem;
+}
 header .header__nav ul {
   list-style: none;
+  font-size: 0;
 }
-
 header .header__nav ul li {
-  display: inline;
+  display: inline-block;
+  padding: 0.5rem 0;
   margin: 0 1rem;
 }
-
-header .header__nav ul li.active a {
-  color: #fd1083;
-}
-
-header .header__nav ul li:hover a {
-  color: #fd1083;
-}
-
 header .header__nav ul li a {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   color: white;
   text-decoration: none;
   text-transform: uppercase;
   transition: color 0.5s;
+  padding: 0.5rem 0.8rem;
+  font-weight: 600;
+  letter-spacing: 0.2rem;
+}
+header .header__nav ul li.active a {
+  color: #fd1083;
+}
+header .header__nav ul li:hover a {
+  color: #fd1083;
 }
 /* Carousel */
 #carousel {
@@ -58,36 +62,44 @@ header .header__nav ul li a {
   background-size: cover;
   height: 700px;
   display: flex;
+  flex-flow: column;
   align-items: center;
   justify-content: center;
-  margin-top: 5rem;
 }
 #carousel .carousel__content {
   color: white;
   text-align: center;
 }
+#carousel .carousel__content > * {
+  letter-spacing: 0.2rem;
+}
 #carousel .carousel__content h1 {
-  font-size: 7rem;
+  font-size: 5.1rem;
   text-transform: capitalize;
 }
 #carousel .carousel__content p {
-  font-size: 2rem;
+  font-size: 1.7rem;
+  margin: 4rem 0 3rem;
 }
-#carousel .carousel__content button {
-  font-size: 2rem;
+.btn {
+  font-size: 1.4rem;
   background-color: #fd1083;
   border: 1px solid white;
-  padding: 10px 20px;
+  padding: 1.5rem;
   border-radius: 7.5px;
   color: white;
   text-transform: uppercase;
   transition: all 0.5s;
 }
-#carousel .carousel__content button:hover {
+.btn:focus,
+.btn:hover {
   background-color: white;
   color: initial;
   border-color: #fd1083;
   cursor: pointer;
+}
+.btn:focus {
+  outline: none;
 }
 /* Intro */
 #intro {
@@ -97,16 +109,20 @@ header .header__nav ul li a {
 #intro .intro__item {
   color: white;
   display: flex;
+  flex-flow: column;
   justify-content: center;
   align-items: center;
   text-align: center;
+  padding: 0 2rem;
 }
 #intro .intro__item h3 {
-  font-size: 3rem;
+  font-size: 2.4rem;
+  margin-bottom: 1.5rem;
 }
 #intro .intro__item p {
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   color: silver;
+  line-height: 1.8;
 }
 #intro .intro__tradition {
   background-color: #4e2a84;
@@ -116,6 +132,7 @@ header .header__nav ul li a {
 }
 #intro .intro__img1 {
   grid-column: 2 / span 2;
+  padding: 0;
 }
 #intro .intro__creativity {
   background-color: #fd1083;
@@ -124,58 +141,103 @@ header .header__nav ul li a {
   grid-column: 1 / span 2;
   background-color: #ed6498;
 }
+#intro .intro__img2 {
+  padding: 0;
+}
 #intro .intro__quality {
   background-color: #836eaa;
+}
+#intro .intro__img3 {
+  padding: 0;
+  align-self: flex-start;
+  border-bottom: 3px solid #fd1083;
 }
 #intro .intro__cakes {
   background-color: #4e2a84;
 }
 #intro .intro__img4 {
   grid-column: 3 / span 2;
+  padding: 0;
 }
 /* Count */
 #count {
   display: flex;
   justify-content: space-around;
-  margin: 7rem 0;
+  padding: 5% 10%;
   text-align: center;
 }
 #count p {
   color: #4e2a84;
   font-size: 3rem;
+  width: 100%;
+  padding: 1.5rem 0;
+  font-weight: 600;
 }
 #count h3 {
   font-size: 2rem;
+  padding: 1.5rem 0;
+  letter-spacing: 0.2rem;
 }
 /* Our Services */
+#service {
+  background-image: url("./../images/s1.jpg");
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 57rem;
+  padding: 5rem 10%;
+}
 #service h1 {
+  color: white;
+  font-weight: 600;
   text-align: center;
-  font-size: 5rem;
+  font-size: 4.8rem;
   text-transform: uppercase;
+  padding: 2rem 0;
+  margin-bottom: 2rem;
 }
 #service .service__content {
   display: flex;
-  width: 70%;
-  margin: 0 auto;
+  justify-content: space-between;
+  align-content: center;
+}
+#service .service__content .service__item {
+  text-align: center;
+  padding: 0 2rem;
+}
+#service .service__content .service__item > * {
+  margin: 1rem 0;
 }
 #service .service__content .service__item i {
-  font-size: 3rem;
+  font-size: 5.6rem;
   width: 100px;
   height: 100px;
   line-height: 100px;
   color: #4e2a84;
-  border: 1px solid currentColor;
-  /* padding: 1rem; */
-  text-align: center;
+  border: 1px solid #4e2a84;
   border-radius: 50%;
+  background-color: #fff;
+}
+#service .service__content .service__item i:hover {
+  color: #fd1083;
+}
+#service .service__content .service__item p:nth-of-type(1) {
+  font-size: 2.3rem;
+  letter-spacing: 0.2rem;
+}
+#service .service__content .service__item p:nth-of-type(2) {
+  font-size: 1.4rem;
+  letter-spacing: 0.1rem;
+  text-align: center;
+  line-height: 2;
 }
 /* Gallery */
 #gallery {
-  margin-top: 7rem;
+  padding: 7rem 0;
 }
 #gallery h1 {
   text-transform: uppercase;
-  font-size: 5rem;
+  font-size: 4.8rem;
   text-align: center;
   margin-bottom: 7rem;
   font-weight: bold;
@@ -183,18 +245,12 @@ header .header__nav ul li a {
 #gallery .gallery__content {
   display: grid;
   gap: 20px;
-  /* grid-template-columns: 1fr 1fr 1fr 1fr; */
   grid-template-columns: repeat(4, 1fr);
+  padding: 0 2rem;
 }
 #gallery .gallery__content .gallery__item {
   position: relative;
 }
-/* #gallery .gallery__content .gallery__item a {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  z-index: 1;
-} */
 #gallery .gallery__content .gallery__text {
   position: absolute;
   top: 0;
@@ -234,9 +290,7 @@ header .header__nav ul li a {
 #gallery .gallery__content .gallery__text p {
   position: absolute;
   bottom: 4rem;
-  /* left: 0;
-  width: 100%;
-  padding: 10px; */
+  font-size: 1.4rem;
   right: 2rem;
   transform: translateY(4rem);
   transition: all 0.5s;
@@ -259,21 +313,34 @@ header .header__nav ul li a {
 /* Bake Team */
 #bake__team {
   background-color: #4e2a84;
-  margin-top: 2rem;
+  padding: 10rem 0;
+}
+#bake__team h1 {
+  text-transform: uppercase;
+  color: white;
+  text-align: center;
+  font-size: 4.8rem;
+  margin-bottom: 7rem;
+  letter-spacing: 0.1rem;
 }
 #bake__team .bake__team__content {
   display: flex;
   flex-wrap: wrap;
-  /* align-content: space-around; */
-  /* align-items: center; */
-  justify-content: space-around;
+  justify-content: space-between;
   margin: 0 auto;
   width: 80%;
-  justify-content: space-around;
 }
 #bake__team .bake__team__content .bake__team__item {
   position: relative;
-  margin-bottom: 5rem;
+  margin-bottom: 2rem;
+  flex-basis: 32%;
+}
+#bake__team .bake__team__content .bake__team__item:nth-child(n + 4) {
+  margin-bottom: 0;
+}
+#bake__team .bake__team__content .bake__team__item img {
+  width: 100%;
+  height: 100%;
 }
 #bake__team .item__content {
   position: absolute;
@@ -290,51 +357,62 @@ header .header__nav ul li a {
 #bake__team .item__content p {
   font-size: 1.5rem;
 }
-#bake__team h1 {
-  text-transform: uppercase;
-  color: white;
-  text-align: center;
-  font-size: 5rem;
-  padding: 5rem 0;
-}
 /* overlay */
-#bake__team .overlay {
+#bake__team .bake__team__item .overlay {
   position: absolute;
-  top: 0;
+  bottom: 0;
   width: 100%;
   height: 100%;
   color: white;
-  background-color: #000000a6;
+  background-color: #000000;
   opacity: 0;
-  transition: all 0.5s;
+  transition: opacity 0.3s ease;
 }
 #bake__team .bake__team__item:hover .item__content {
   opacity: 0;
 }
 #bake__team .bake__team__item:hover .overlay {
   opacity: 1;
+  background-color: #000000a6;
 }
-#bake__team .overlay .text {
+#bake__team .bake__team__item .overlay .text {
   position: absolute;
-  top: 7rem;
+  top: 50%;
+  transform: translateY(-50%);
   left: 2rem;
+  right: 2rem;
+  line-height: 2;
 }
-#bake__team .overlay .text ul {
+#bake__team .bake__team__item .overlay .text > * {
+  margin: 1rem 0;
+}
+#bake__team .bake__team__item .overlay .text h4 {
+  color: rgba(255, 14, 131, 1);
+  font-size: 2rem;
+}
+#bake__team .bake__team__item .overlay .text p:nth-of-type(1),
+#bake__team .bake__team__item .overlay .text p:nth-of-type(2) {
+  font-size: 1.4rem;
+}
+#bake__team .bake__team__item .overlay .text ul {
   list-style: none;
 }
-#bake__team .overlay .text ul li {
+#bake__team .bake__team__item .overlay .text ul li {
   display: inline-block;
 }
-
-#bake__team .overlay .text ul li i {
-  width: 50px;
-  height: 50px;
+#bake__team .bake__team__item .overlay .text ul li i {
+  width: 30px;
+  height: 30px;
   color: white;
-  font-size: 2rem;
-  border: 1px solid white;
-  line-height: 50px;
+  font-size: 1.6rem;
+  border: 1px solid currentColor;
+  line-height: 30px;
   text-align: center;
   margin: 0.5rem;
+  transition: all 0.5s;
+}
+#bake__team .bake__team__item .overlay .text ul li i:hover {
+  color: #ed6498;
 }
 /* Testimonials */
 #testimonials {
@@ -343,20 +421,46 @@ header .header__nav ul li a {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  padding: 5rem 0;
+  text-align: center;
 }
 #testimonials h1 {
-  font-size: 5rem;
-  text-align: center;
+  font-size: 4.8rem;
   text-transform: uppercase;
   color: white;
   padding: 5rem 0;
 }
-#testimonials .testimonials__item {
-  color: white;
-  text-align: center;
+#testimonials .testimonials__content {
+  border: 0.5rem solid rgba(255, 14, 131, 1);
+  padding: 2rem 5rem;
+  width: 70%;
+  margin: 0 auto;
+  background-color: rgba(255, 255, 255, 0.5);
+  color: black;
+}
+#testimonials .testimonials__item i {
+  color: dodgerblue;
+  font-size: 2.1rem;
+  margin: 0 1rem;
 }
 #testimonials .testimonials__item p {
+  line-height: 1.6;
+  margin-top: 2rem;
+  font-size: 1.6rem;
+}
+#testimonials .testimonials__item p:nth-child(2) {
+  color: white;
   font-size: 1.5rem;
+  transform: scale(1.2);
+}
+.owl-carousel .owl-dots .owl-dot {
+  outline: none;
+}
+.owl-carousel .owl-dots .owl-dot span {
+  background-color: #869791 !important;
+}
+.owl-carousel .owl-dots .active span {
+  background-color: black !important;
 }
 /* Contact */
 #contact h1 {
@@ -379,30 +483,234 @@ header .header__nav ul li a {
   width: 100%;
   padding: 1.5rem;
   border-radius: 5px;
+  font-size: 1.5rem;
   border: 1px solid black;
+}
+#contact form .contact__item input::placeholder {
+  color: rgb(114, 111, 111);
+  opacity: 1;
+  font-size: 1.8rem;
+}
+#contact form .contact__item input:focus {
+  outline: none;
+  box-shadow: 0 0 0.7rem dodgerblue;
 }
 #contact form .contact__item textarea {
   width: 100%;
+  resize: none;
+  padding: 1.5rem;
+  font-size: 1.5rem;
+  border: 1px solid black;
+  outline: none;
+}
+#contact form .contact__item textarea::placeholder {
+  color: black;
+  font-size: 1.8rem;
 }
 .width-100 {
   width: 100% !important;
 }
 #contact form .btn__send {
   width: 100%;
-  font-size: 2rem;
+  font-size: 1.6rem;
   padding: 1rem;
-  border: 1px solid pink;
+  border: none;
   border-radius: 5px;
-  background-color: pink;
+  background-color: rgba(255, 14, 131, 1);
   margin: 1rem;
+  transition: all 0.5s;
 }
-/* Map */
+#contact form .btn__send:hover {
+  background-color: #000;
+  color: white;
+}
+#contact form .btn__send:focus {
+  outline: none;
+  background-color: #000;
+  color: white;
+}
+/* Contact Map */
+#map {
+  padding: 3rem 1.5rem;
+}
+/* Contact Info */
+#info {
+  padding: 5rem 10rem;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+}
+#info .info__item {
+  flex-basis: 30%;
+  text-align: center;
+  font-size: 1.6rem;
+  line-height: 1.8;
+  padding: 2rem 0;
+  letter-spacing: 0.2rem;
+}
+#info .info__item i {
+  font-size: 2.8rem;
+  color: #4e2a84;
+  margin-bottom: 1rem;
+}
+#info .info__desc {
+  transform: scale(1.1);
+  width: 80%;
+  margin: 0 auto;
+}
+#info .info__desc a {
+  text-decoration: none;
+  color: inherit;
+}
+/* Footer */
+footer {
+  font-size: 1.6rem;
+  padding: 5rem 10rem;
+  text-align: center;
+  border: 1px solid;
+  background-color: #000;
+  color: white;
+}
+footer .footer__list {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+footer .footer__list .footer__item {
+  flex-basis: 25%;
+  align-self: stretch;
+  padding: 0 2rem;
+}
+footer .footer__list .footer__item h3 {
+  padding: 1rem 0;
+  color: rgba(255, 14, 131, 1);
+}
+footer .footer__list .footer__item h3:first-child {
+  font-size: 2.3rem;
+  text-align: left;
+  margin-bottom: 1rem;
+}
+footer .footer__list .footer__item h3:first-child::first-letter {
+  text-transform: capitalize;
+}
+footer .footer__list .footer__item:first-child .footer__item-desc {
+  text-align: left;
+  line-height: 1.8;
+}
+footer .footer__list .footer__item:first-child .footer__item-desc span {
+  margin-top: 2rem;
+  display: block;
+}
+footer .footer__list .footer__item:first-child .footer__item-social-icons {
+  margin: 2rem;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-start;
+  align-content: center;
+}
+footer .footer__list .footer__item:first-child .footer__item-social-icons a {
+  text-decoration: none;
+  color: white;
+  border: 1px solid;
+  margin-right: 1rem;
+  padding: 1rem;
+  display: inline-block;
+  width: 4rem;
+  height: 4rem;
+  transition: color 0.5s;
+}
+footer
+  .footer__list
+  .footer__item:first-child
+  .footer__item-social-icons
+  a:hover {
+  color: #ed6498;
+}
+footer .footer__list .footer__item:nth-child(2) .footer__item-schedule {
+  text-align: left;
+}
+footer .footer__list .footer__item:nth-child(2) .footer__item-schedule li {
+  margin-bottom: 2rem;
+  padding-bottom: 0.5rem;
+  border-bottom: 1px dotted white;
+  display: flex;
+  justify-content: space-between;
+}
+footer .footer__list .footer__item:nth-child(2) .footer__item-schedule li {
+  text-transform: capitalize;
+}
+footer .footer__list .footer__item:nth-child(2) .footer__item-schedule li span {
+  text-transform: initial;
+}
+footer .footer__list .footer__item:nth-child(3) h3 {
+  text-transform: capitalize;
+}
+footer .footer__list .footer__item:nth-child(3) p {
+  line-height: 2;
+  margin-bottom: 1.5rem;
+  text-align: left;
+}
+footer .footer__list .footer__item:nth-child(4) h3 {
+  text-transform: uppercase;
+}
+footer .footer__list .footer__item:last-child form {
+  display: flex;
+  flex-flow: column;
+  padding: 1rem 0;
+}
+footer .footer__list .footer__item:last-child form input {
+  padding: 1rem;
+  margin-bottom: 1rem;
+  width: 80%;
+  outline: none;
+  border-radius: 0.5rem;
+  border: 1px solid;
+}
+footer .footer__list .footer__item:last-child form input:focus {
+  box-shadow: 0 0 5px dodgerblue;
+}
+footer .footer__list .footer__item:last-child form button {
+  width: 40%;
+  padding: 1rem 2rem;
+  border-radius: 0.5rem;
+  outline: none;
+  border: 1px solid;
+  background-color: rgba(255, 14, 131, 1);
+  text-transform: capitalize;
+  transition: background-color 0.5s;
+}
+footer .footer__list .footer__item:last-child form button:hover {
+  cursor: pointer;
+}
+footer .footer__list .footer__item:last-child form button:hover,
+footer .footer__list .footer__item:last-child form button:focus {
+  background-color: white;
+}
+footer .footer__list .footer__item:last-child p:nth-of-type(1) {
+  line-height: 2;
+  text-align: left;
+}
+footer .footer__list .footer__item ul {
+  list-style: none;
+}
+footer .footer__copy-rights {
+  text-transform: capitalize;
+  letter-spacing: 0.2rem;
+  margin-top: 2rem;
+}
+footer .footer__copy-rights a {
+  text-decoration: none;
+  color: rgba(255, 14, 131, 1);
+}
 /* Back To Top */
 .backToTop {
   position: fixed;
   padding: 2rem;
   bottom: 2rem;
   right: 2rem;
+  font-size: 2rem;
 }
 .backToTop .backToTopLink {
   opacity: 0;
